[Fix]: margin left alignment in Dashboard components

--- a/src/pages/general-style.css
+++ b/src/pages/general-style.css
@@ -7,7 +7,7 @@ body {
   font-weight: 400;
   font-size: 20px;
   line-height: 48px;
-  margin: 20px;
+  margin: 1rem;
 }
 
 .text-drop {
@@ -315,6 +315,10 @@ body {
   font-size: 15px;
   cursor: pointer;
   transition: background-color 0.3s;
+}
+
+.buttons-container {
+  margin-left: 0.6rem;
 }
 
 .filters {
